tests/NormalTests/paczka1/small_fuzzy/38740892.err
Error in line 6: RmxTXzvxMY1 A164 69,7
Error in line 8: RmxTXzvxMY1 S748 50,5
